--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+.res-pad {
+  padding: 0.5rem;
+}
 .top-header {
   background-color: var(--green);
   width: 100%;
@@ -43,10 +46,13 @@ body {
   align-items: center;
   width: 100%;
 }
-.mobilenav .logo{
+.mobile-web-nav {
+  position: relative;
+}
+.mobile-web-nav .logo{
   width: 100%;
 }
-.mobilenav .logo img{
+.mobile-web-nav .logo img{
   height: 4.2rem
 }
 .toggle-button {
@@ -69,13 +75,13 @@ body {
   display: block;
   margin: 0.4rem 0;
 }
-.mobilenav {
-  position: relative;
-}
-.mobilenav .mobilemenu{
+.web-menu {
   display: none;
 }
-.mobilenav .mobilemenu.show-mobile {
+.mobile-web-nav .mobilemenu{
+  display: none;
+}
+.mobile-web-nav .mobilemenu.show-mobile {
   display: flex;
     flex-direction: column;
     position: absolute;
@@ -85,10 +91,10 @@ body {
     padding: 0.5rem;
     left: 0;
 }
-.mobilenav .mobilemenu > ul{
+.mobile-web-nav .mobilemenu > ul{
   padding-top: 1.6rem;
 }
-.mobilenav .mobilemenu > ul >li{
+.mobile-web-nav .mobilemenu > ul >li{
   list-style: none;
   text-transform: uppercase;
   padding: 1.3rem;
@@ -98,23 +104,23 @@ body {
   background: #cccccc56;
  /* box-shadow: inset 0 0 10px transparent;;*/
 }
-.mobilenav .mobilemenu > ul >li > a{
+.mobile-web-nav .mobilemenu > ul >li > a{
   color: rgba(0, 0, 0, 0.705);
   text-decoration: none;
 }
-.mobilenav .mobilemenu > ul >li > a span{
+.mobile-web-nav .mobilemenu > ul >li > a span{
   color: rgba(255, 255, 255, 0.603);
 }
-.mobilenav .mobilemenu .search-container{
+.mobile-web-nav .mobilemenu .search-container{
   width: 100%;
 }
-.mobilenav .mobilemenu input[type=text]{
+.mobile-web-nav .mobilemenu input[type=text]{
   padding: 1rem;
   font-size: 1rem;
   background: #cccccc56;
   border: none;
 }
-.mobilenav .mobilemenu .search-container button {
+.mobile-web-nav .mobilemenu .search-container button {
   padding: 6px 10px;
   margin-top: 8px;
   margin-right: 16px;
@@ -241,8 +247,24 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .res-pad {
+    padding: 1rem 5rem;
+  }
+  .main-header .mobile-web-nav .toggle-button {
+    display: none;
+  }
+  .main-header .mobile-web-nav .web-menu {
+    display: flex;
+  }
+  .main-header .mobile-web-nav
   .section .row {
     flex-direction: row;
     flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .res-pad {
+    padding: 1rem 10rem;
   }
 }
