--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,6 @@ body {
 .mobile-web-nav {
   position: relative;
 }
-.mobile-web-nav .logo{
-  width: 100%;
-}
 .mobile-web-nav .logo img{
   height: 4.2rem
 }
@@ -256,7 +253,17 @@ body {
   .main-header .mobile-web-nav .web-menu {
     display: flex;
   }
-  .main-header .mobile-web-nav
+  .main-header .mobile-web-nav .web-menu ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+  .main-header .mobile-web-nav .web-menu ul li {
+    display: flex;
+    padding: 0 0.5rem;
+  }
   .section .row {
     flex-direction: row;
     flex-wrap: wrap;
