--- a/css/styles.css
+++ b/css/styles.css
@@ -328,6 +328,116 @@
   font-weight: bold;
 
 }
+.signup{
+  background: darkslategray;
+  padding: 3rem 1rem;
+  text-align: center;
+  color: white;
+}
+.signup h1{
+    padding: 1rem;
+    margin-bottom: 0.8rem;
+}
+.signup p{
+    font-size: 1.1rem;
+    margin-bottom: 0.8rem;
+}
+input[type=email]{
+  width: 100%;
+  padding: 0.8rem 2rem;
+  outline: none;
+  margin-bottom: 1.2rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.signup a{
+  text-decoration: none;
+  color: white;
+  background: darkgoldenrod;
+  margin-top: 0.8rem;
+  padding: .5rem 1.2rem;
+  transition: all .4s ease;
+}
+.signup a:hover{
+  background: linear-gradient(to right, burlywood, darkslategray );
+
+}
+.benefits{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 1.5rem;
+  
+
+}
+.benefits > div h1{
+  color: darkslategray;
+  font-size: 1.8rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+.benefits > div > ul >li{
+  padding: .5rem;
+  font-size: 1.1rem;
+}
+.studentProject{
+  background: #f4f4f4;
+  padding: 2rem 1rem; 
+}
+.studentProject h1{
+  text-align: center;
+  color: darkslategray;
+  font-size: 1.8rem;
+}
+.studentProject h1 span{
+  color: darkgoldenrod;
+  border-bottom: 3px solid darkslategray;
+  padding-bottom: 1rem;
+}
+.studentProject a{
+  text-align: center;
+
+}
+.store{
+  width: 100%;
+  background: url(/img/1-1-450x300.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  object-fit: cover;
+  color: white;
+  text-align: center;
+  position: relative;
+}
+.store  .storeoverlay{
+  position: relative;
+  padding: 3rem 1rem;
+  top:0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.767);
+}
+.store .storeoverlay .text h1{
+  font-size: 1.8rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+.store .storeoverlay .text p{
+  font-size: 1.3rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+.store .storeoverlay .text a{
+  text-decoration: none;
+  color: white;
+  background: burlywood;
+  padding: 0.6rem 1.3rem;
+  border-radius: 20px;
+  margin: 1rem;
+  font-size: 1.1rem;
+}
+
 
 
 
@@ -337,3 +447,4 @@
     flex-wrap: wrap;
   }
 }
+
