--- a/css/styles.css
+++ b/css/styles.css
@@ -483,7 +483,9 @@ footer{
 }
 .footer-container p{
   padding-bottom: 0.8rem;
+  font-size: .9rem
 }
+
 
 .footer-container .footer-courses img{
   width: 20%;
@@ -495,6 +497,9 @@ footer{
   border: 2px solid white;
   padding: .5rem 1.1rem
 
+}
+.footer-container .footer-courses a{
+  font-weight: bold;
 }
 .footer-container .footer-courses a,
 .footer-container .footer-links a{
