--- a/css/styles.css
+++ b/css/styles.css
@@ -157,8 +157,6 @@ body {
   border-top: 1px solid rgba(0, 0, 0, 0.356);
   border-bottom: 1px solid rgba(0, 0, 0, 0.356);
   padding: 2rem;
-}
-.welcome a:hover{
 
 }
 .section {
@@ -315,7 +313,7 @@ body {
     margin-bottom: 0.8rem;
 }
 input[type=email]{
-  width: 100%;
+
   padding: 0.8rem 2rem;
   outline: none;
   margin-bottom: 1.2rem;
@@ -421,7 +419,7 @@ input[type=email]{
   width: 100%;
 }
 .in-place-of-video > div img{
-  width: 100%;
+  width: 50%;
 }
 .projectoverlay:hover{
   opacity: 1;
@@ -488,7 +486,7 @@ footer{
 
 
 .footer-container .footer-courses img{
-  width: 20%;
+  height: 50px;
 }
 .footer-btn{
   margin-top: 1rem;
@@ -539,6 +537,9 @@ footer{
   .section .row {
     flex-direction: row;
     flex-wrap: wrap;
+  }
+  .demoimgs > div img{
+    width: 50%;
   }
 }
 
