--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ body {
 }
 .top-header .phone span{
   color: white;
+  font-size: 12px;
+}
+.top-header .top-address{
+  display: none;
+  
 }
 .top-header > div > ul >li{
   list-style: none;
@@ -44,7 +49,8 @@ body {
   width: 100%;
 }
 .mobilenav .logo{
-  width: 100%;
+  padding-right: 2rem;
+  
 }
 .mobilenav .logo img{
   height: 4.2rem
@@ -57,6 +63,7 @@ body {
   padding-top: 0;
   padding-bottom: 0;
   vertical-align: middle;
+
 }
 .toggle-button:focus {
   outline: none;
@@ -68,6 +75,37 @@ body {
   border-radius: 6px;
   display: block;
   margin: 0.4rem 0;
+}
+.desktopmenu{
+  
+  display: none;
+}
+.desktopmenu > ul > li{
+  display: inline-block;
+  padding: 0 0.4rem;
+  text-transform: capitalize;
+}
+.desktopmenu > ul> li>a{
+  color: darkslategray;
+  text-decoration: none;
+  font-weight: 500;
+}
+.desktopmenu > ul> li>a:hover{
+  opacity: 0.2;
+}
+
+.desktopsearch-bar{
+  display: none;
+}
+.desktopsearch-bar button {
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: darkslategray;
+  color: white;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
 }
 .mobilenav {
   position: relative;
@@ -96,7 +134,6 @@ body {
   z-index: -2;
   border: 1px solid #cccccc65;
   background: #cccccc56;
- /* box-shadow: inset 0 0 10px transparent;;*/
 }
 .mobilenav .mobilemenu > ul >li > a{
   color: rgba(0, 0, 0, 0.705);
@@ -124,15 +161,46 @@ body {
   cursor: pointer;
 }
 .main-banner{
+  position: relative;
   width: 100%;
 }
-.main-banner > ul > li .background{
-  background: green;
+.main-banner img{
   width: 100%;
 }
-.main-banner > ul > li> .img{
-  width: 100%;
+.header-overlay-text{
+  position: absolute;
+  top: 0;
+  left:0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.459);
+  padding: 3rem 1rem;
+  color: white;
+  text-align: center;
+
 }
+.header-overlay-text h1{
+  font-size: 1.8rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+.header-overlay-text p{
+  font-size: 1.3rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+.header-overlay-text a{
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  padding: .8rem 1.5rem;
+  border-radius: 20px;
+  transition: all .4s ease;
+}
+.header-overlay-text a:hover{
+  background: burlywood;
+}
+
 .welcome{
   margin-top: auto;
   padding: 2rem 1rem 2.5rem 1rem;
@@ -339,8 +407,6 @@ input[type=email]{
   align-items: center;
   padding: 3rem 1.5rem;
   width: 100%;
-  
-
 }
 .benefits > div h1{
   color: darkslategray;
@@ -366,8 +432,7 @@ input[type=email]{
 }
 .studentProject h1 span{
   color: darkgoldenrod;
-  border-bottom: 3px solid darkslategray;
-  padding-bottom: 1rem;
+  
 }
 .projectdemo {
     padding: 3rem 1rem ;
@@ -411,9 +476,6 @@ input[type=email]{
   width: 50px;
   border-radius: 50%;
 }
-
-
-
 
 .in-place-of-video > div{
   width: 100%;
@@ -486,7 +548,7 @@ footer{
 
 
 .footer-container .footer-courses img{
-  height: 50px;
+  height: 40px;
 }
 .footer-btn{
   margin-top: 1rem;
@@ -527,19 +589,53 @@ footer{
 }
 
 
-
-
-
-
-
-
 @media screen and (min-width: 768px) {
   .section .row {
     flex-direction: row;
-    flex-wrap: wrap;
   }
+  .why .row >div{
+    margin: 0 0.4rem;
+  }
+  .projectdemo{
+    flex-direction: row;
+  }
+  
   .demoimgs > div img{
-    width: 50%;
+    width: 80%;
   }
+  .footer-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 860px){
+  .top-header .top-address{
+    display: block;
+  }
+}
+@media (min-width: 990px){
+  .toggle-button{
+    display: none;
+  }
+  .desktopmenu{
+    display: block;
+  }
+  .desktopsearch-bar{
+    display: block;
+  }
+  
+  .footer-container {
+    display: flex;
+    flex-direction: row;
+  }
+  .footer-container > div {
+    margin: 0 0.5rem
+  }
+  .copyright{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
 }
 
