--- a/css/constants.css
+++ b/css/constants.css
@@ -1,10 +1,28 @@
-@import './variables.css';
+@import "./variables.css";
 
+p {
+  padding: 0.5rem 0;
+}
+hr {
+  border: 1px solid #f5f5f5;
+}
 a {
   text-decoration: none;
   color: black;
 }
-.btn{
+input, textarea {
+  width: 100%;
+  min-height: 35px;
+  background-color: #f5f5f5;
+  border: 0;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+}
+textarea {
+  min-height: 100px;
+  resize: none;
+}
+.btn {
   text-decoration: none;
   color: white;
   background: burlywood;
@@ -15,9 +33,9 @@ a {
 .title {
   color: var(--green);
   font-size: 1.6rem;
-  padding-bottom: 1.5rem ;
+  padding-bottom: 1.5rem;
 }
-.shortline{
+.shortline {
   text-align: center;
   width: 100%;
   display: flex;
@@ -25,8 +43,8 @@ a {
   justify-content: center;
   padding-bottom: 2rem;
 }
-.line{ 
-  width:20%;
+.line {
+  width: 20%;
   height: 3px;
   background: darkslategray;
 }
