--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import "./variables.css";
 @import "./card.css";
 @import "./constants.css";
+@import "./form.css";
 
 * {
   margin: 0;
@@ -92,10 +93,6 @@ body {
   padding: 0rem 0.5rem;
   text-transform: capitalize;
 }
-/*.active, .desktopmenu > ul > li:hover{
-  border-bottom: 2px solid darkslategray;
-}*/
-
 .desktopmenu > ul > li > a {
   color: darkslategray;
   text-decoration: none;
@@ -254,6 +251,9 @@ body {
   z-index: -1;
   max-height: 600px;
   overflow: hidden;
+}
+.main-banner.inner-page {
+  max-height: 300px;
 }
 .main-banner img {
   width: 100%;
@@ -680,6 +680,20 @@ input[type="email"] {
 .copyright > div > ul > li > a:hover {
   color: burlywood;
 }
+.about {
+  display: flex;
+  flex-direction: column;
+}
+.about .mission-vision {
+  display: flex;
+  flex-direction: column;
+}
+.about .mission-vision .mission-content {
+  padding: 1rem 0;
+}
+.contact-form {
+  flex: 0 0 60%;
+}
 
 @media screen and (min-width: 768px) {
   .res-pad {
@@ -703,7 +717,11 @@ input[type="email"] {
   }
   .main-header .mobile-web-nav .desktopmenu ul li {
     display: flex;
-    padding: 0 0.5rem;
+    padding: 0 1.5rem;
+  }
+  
+  .main-header .mobile-web-nav .desktopmenu ul li:last-child {
+    padding-right: 0;
   }
   .header-overlay-text {
     margin: 0 25%;
@@ -724,6 +742,15 @@ input[type="email"] {
   .footer-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+  .about {
+    flex-direction: row;
+  }
+  .about .about-content {
+    padding-right: 1rem;
+  }
+  .about .mission-vision {
+    padding-left: 1rem;
   }
 }
 @media (min-width: 860px) {
