--- a/css/course.css
+++ b/css/course.css
@@ -6,12 +6,110 @@ h1{
 .course-intro p{
     font-size: 1rem;
 }
-.course-tittle{
-    padding: 3rem 1rem;
+.highlights{
     background: #f4f4f4;
-    font-weight: 400;
+    padding: 3rem 1rem;
+    
+
 }
-.course-tittle h2{
+.highlights h2{
+    color: var(--green);
+    text-align: center;
+}
+.hightlightlist{
+    display: flex;
+    flex-direction: column;
+}
+.highlights > div > ul > li{
+    padding: 0.5rem 0rem;
+    font-style: italic;
+    font-size: 1rem; 
+}
+.hightlightlist1{
     margin-bottom: 1rem;
 }
+.how-to-enroll{
+    background-color: burlywood;
+    padding: 3rem 1rem;
+}
+.how-to-enroll h2{
+    color: var(--green);
+    font-size: 1.4rem;
+    text-align: start;
+    margin-bottom: 1rem;
+}
+.how-to-enroll p{
+    font-size:1rem ;
 
+}
+.how-to-enroll >ul{
+    padding: 0.5rem;
+    
+}
+.how-to-enroll >ul>li{
+    padding: 0.5rem 0rem;
+    list-style: none;
+    font-style: italic;
+}
+.how-to-enroll .linedivider img{
+    width: 100%;
+}
+.connect h2{
+    font-weight: lighter;
+    padding-bottom: 2rem;
+    letter-spacing: 1px;
+}
+.connect .storeoverlay .text p{
+    font-size:1rem;
+    padding-bottom: 1rem;
+}
+.connect .storeoverlay .text .icons{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+}
+.connect .storeoverlay .text .icons> div{
+
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0rem .4rem;
+}
+.connect .storeoverlay .text .icons> div a{
+    color: white;
+    background: none;
+    font-size: 1.2rem;
+}
+.connect .storeoverlay .text .icons> div a:hover{
+    transform: translate(-20%);
+}
+.footer-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+}
+@media (max-width: 480px){
+    .footer-container{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media(min-width:750px){
+    .hightlightlist{
+        flex-direction: row;
+    }
+
+    .footer-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+}
