--- a/css/course.css
+++ b/css/course.css
@@ -1,5 +1,9 @@
 @import "./styles.css";
-h1{
+
+.top-header{
+    display: none;
+}
+.course-intro h1{
     color: var(--green);
 }
 
@@ -10,24 +14,29 @@ h1{
     background: #f4f4f4;
     padding: 3rem 1rem;
     
+    
 
 }
 .highlights h2{
     color: var(--green);
     text-align: center;
+    padding-bottom: 2rem;
 }
 .hightlightlist{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.highlights > div > ul > li{
-    padding: 0.5rem 0rem;
+.hightlightlist > div > ul > li{
+    padding: 0.8rem 0.4rem;
     font-style: italic;
     font-size: 1rem; 
 }
 .hightlightlist1{
     margin-bottom: 1rem;
 }
+
 .how-to-enroll{
     background-color: burlywood;
     padding: 3rem 1rem;
@@ -102,8 +111,14 @@ h1{
 }
 
 @media(min-width:750px){
+    .top-header{
+        display: block;
+    }
     .hightlightlist{
         flex-direction: row;
+    }
+    .hightlightlist > div{
+        margin: 0 0.5rem;
     }
 
     .footer-container{
