--- a/css/styles.css
+++ b/css/styles.css
@@ -695,6 +695,10 @@ input[type="email"] {
 .contact-form {
   flex: 0 0 60%;
 }
+.accordion {
+  margin: 1rem 0;
+  width: 100%;
+}
 
 @media screen and (min-width: 768px) {
   .res-pad {
