commented out unuse styles in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ body {
 .desktopsearch-bar {
   display: none;
 }
-.desktopsearch-bar button {
+/*.desktopsearch-bar button {
   position: relative;
 }
 .desktopsearch-bar .toggler {
@@ -193,7 +193,7 @@ body {
 .desktopsearch-bar .outofthescreen input[type="text"] {
   padding: 0.8rem 1.2rem;
   outline: none;
-}
+}*/
 .mobilenav {
   position: relative;
 }
@@ -421,7 +421,7 @@ body {
   padding-bottom: 3rem;
   font-size: 2.3rem;
 }
-.packages {
+/*packages {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -472,7 +472,7 @@ body {
 .packages > div .price p {
   color: darkslategray;
   font-weight: bold;
-}
+}*/
 .signup {
   background: darkslategray;
   padding: 3rem 1rem;
@@ -523,7 +523,7 @@ input[type="email"] {
   padding: 0.5rem;
   font-size: 1.1rem;
 }
-.studentProject {
+/*.studentProject {
   background: #f4f4f4;
   padding: 2rem 1rem;
   text-align: center;
@@ -588,7 +588,7 @@ input[type="email"] {
 }
 .projectoverlay:hover {
   opacity: 1;
-}
+}*/
 
 .store {
   width: 100%;
