--- a/css/card.css
+++ b/css/card.css
@@ -1,10 +1,10 @@
 .card {
   min-width: 280px;
-  min-height: 100px;
+  min-height: 300px;
   border-radius: 5px;
   margin: 0.65rem 0;
   border: 1px solid rgba(0,0,0,0.05);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+  box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.082), -3px 3px 3px 2px rgba(0, 0, 0, 0.082);
 }
 
 @media screen and (min-width: 768px) {
