--- a/css/styles.css
+++ b/css/styles.css
@@ -326,9 +326,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .welcome p {
   font-size: 1.1rem;
 }
+
 .welcome .mission {
   margin-top: 1rem;
   padding-top: 1rem;
@@ -798,14 +800,21 @@ input[type="email"] {
     flex-direction: row;
 
   }
+  .welcome .center-contentAndvideo > div{
+      justify-content: ;
+  }
+
+  
   .welcomenote{
     margin-right: 1rem;
+    width: 50%;
   }
   .welcomevideo{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 1rem;
+    width: 50%;
   }
     
   
