--- a/css/card.css
+++ b/css/card.css
@@ -3,7 +3,7 @@
   min-height: 260px;
   border-radius: 5px;
   margin: 0.65rem 0;
-  background-color: lightgreen;
+  background-color: #C6F2CD;
   border: 1px solid rgba(0,0,0,0.05);
   box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.082), -3px 3px 3px 2px rgba(0, 0, 0, 0.082);
 }
