--- a/css/card.css
+++ b/css/card.css
@@ -7,20 +7,20 @@
   border: 1px solid rgba(0,0,0,0.05);
   box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.082), -3px 3px 3px 2px rgba(0, 0, 0, 0.082);
 }
-.cardTwo{
-  min-width: 400px;
-  min-height: 260px;
-  margin: 0.65rem 0;
-  border: 1px solid rgba(0,0,0,0.05);
-  box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.082), -3px 3px 3px 2px rgba(0, 0, 0, 0.082);
-
-
+.nuCard {
+  min-width: 300px;
+  min-height: 0;
+  background-color: #ffffff;
+  border: 0;
+  box-shadow: none;
 }
 
 @media screen and (min-width: 768px) {
   .card {
     margin: 1rem;
     max-width: 200px;
-
+  }
+  .nuCard {
+    min-width: 400px;
   }
 }
