add cta section to the homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,6 @@ body {
 .desktopmenu > ul > li:hover .dropdownmenu1 > ul > li a {
   color: #f4f4f4;
 }
-
 .desktopsearch-bar {
   display: none;
 }
@@ -233,7 +232,6 @@ body {
 .header-overlay-text a:hover {
   background: burlywood;
 }
-
 .welcome {
   margin-top: auto;
   padding: 2rem 1rem 2.5rem 1rem;
@@ -243,21 +241,18 @@ body {
   justify-content: center;
   align-items: center;
 }
-.welcome h2{
-  color: var(--green) ;
+.welcome h2 {
+  color: var(--green);
 }
-.welcome h2 span{
+.welcome h2 span {
   border-bottom: 1px solid var(--green);
   padding-bottom: 1rem;
 }
-
 .welcome p {
   font-size: 1rem;
   text-align: start;
   padding: 1rem;
-  
 }
-
 .section {
   display: flex;
   flex-direction: column;
@@ -268,7 +263,7 @@ body {
   width: 100%;
 }
 .section.why {
-  background: var(--grey)
+  background: var(--grey);
 }
 .section h2 {
   color: white;
@@ -334,7 +329,6 @@ body {
   padding: 0.6rem 1.3rem;
   border-radius: 20px;
 }
-
 .section.courses .row .course-card {
   display: flex;
   flex-direction: column;
@@ -343,7 +337,6 @@ body {
   width: 100%;
   height: 200px;
   overflow: hidden;
-
 }
 .section.courses .row .course-card .course-img img {
   width: 100%;
@@ -368,57 +361,53 @@ body {
 .courses h2 {
   padding-top: 2rem;
 }
-.courses h2 span{
+.courses h2 span {
   padding-bottom: 1rem;
-  border-bottom: 1px solid #25d366;;
+  border-bottom: 1px solid #25d366;
 }
-
-.courses p{
+.courses p {
   padding-top: 1rem;
   color: white;
 }
-.courses .more-info{
+.courses .more-info {
   text-align: start;
 }
-.courses .more-info a{
+.courses .more-info a {
   border-bottom: 1px solid black;
   font-size: 0.8rem;
 }
-.courses .btn{
+.courses .btn {
   border: 2px solid white;
   border-radius: 0;
   background-color: #25d366;
-
 }
-.graduates h2{
+.graduates h2 {
   text-align: center;
-  color: var(--green) ;
+  color: var(--green);
 }
-.graduates h2 span{
+.graduates h2 span {
   border-bottom: 1px solid var(--green);
   padding-bottom: 1rem;
-
 }
 .graduates .graduatesquote {
   padding-top: 2rem;
   display: flex;
   flex-direction: column;
 }
-
-.graduates .graduatesquote .quotesContent{
+.graduates .graduatesquote .quotesContent {
   padding: 2.2rem;
   text-align: left;
 }
-.fa-quote-left{
-  color: var(--green)
+.fa-quote-left {
+  color: var(--green);
 }
-.graduates .graduatesquote .profile{
+.graduates .graduatesquote .profile {
   background-color: var(--green);
   padding: 1rem;
   display: flex;
   align-items: center;
 }
-.graduates .graduatesquote .profile .img-holder{
+.graduates .graduatesquote .profile .img-holder {
   border-radius: 50%;
   width: 100px;
   height: 100px;
@@ -428,52 +417,27 @@ body {
   width: 100%;
   height: auto;
 }
-.graduates .graduatesquote .profile .nameAndTitle{
-  padding-left: .8rem;
+.graduates .graduatesquote .profile .nameAndTitle {
+  padding-left: 0.8rem;
   color: white;
   text-align: left;
 }
-
-
-
-/*.store {
-  width: 100%;
-  background: url(/img/eresbella-cta-image.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  object-fit: cover;
-  color: white;
-  text-align: center;
-  position: relative;
+.section.bg-lemon {
+  background-color: var(--light-green);
 }
-.store .storeoverlay {
-  position: relative;
-  padding: 3rem 1rem;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.767);
+.section.cta {
+  padding: 3.5rem 0;
 }
-.store .storeoverlay .text h1 {
-  font-size: 1.8rem;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+.section.cta .title {
+  color: var(--green);
+  padding-bottom: 0;
 }
-.store .storeoverlay .text p {
-  font-size: 1.3rem;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+.section.cta .btn {
+  border: 2px solid white;
+  border-radius: 0;
+  background-color: #25d366;
+  margin-bottom: 0;
 }
-.store .storeoverlay .text a {
-  text-decoration: none;
-  color: white;
-  background: burlywood;
-  padding: 0.6rem 1.3rem;
-  border-radius: 20px;
-  margin: 1rem;
-  font-size: 1.1rem;
-}*/
 .footer-container {
   background: #eaeaea;
   padding: 3rem 1rem;
@@ -639,27 +603,25 @@ body {
   .copyright {
     padding: 1rem 10rem;
   }
-  .welcome .center-contentAndvideo{
+  .welcome .center-contentAndvideo {
     padding-top: 4rem;
     display: flex;
     flex-direction: row;
   }
-  .welcomenote{
+  .welcomenote {
     margin-right: 1rem;
     width: 50%;
   }
-  .welcomevideo{
+  .welcomevideo {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 1rem;
     width: 50%;
   }
-  .graduates .graduatesquote{
+  .graduates .graduatesquote {
     flex-direction: row;
   }
-    
-  
 
   .footer-container {
     display: flex;
