--- a/css/certinhair.css
+++ b/css/certinhair.css
@@ -2,7 +2,6 @@
 @import "./variables.css";
 
 .cert-title{
-    
     padding: 3rem 1rem;
     background: #f4f4f4;
 }
@@ -15,17 +14,16 @@
     font-size: 1rem;
 }
 .theCourse{
-    padding: 3rem 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
     color: rgba(0, 0, 0, 0.719);
+    background-color: var(--cream);
 }
-.theCourse .courseimg{
+.theCourse .courseimg {
     padding-bottom: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 .theCourse > div .flexible{
     border-bottom: 1px solid #ccc;
@@ -47,12 +45,8 @@
 }
 
 @media(min-width: 760px){
-    
     .theCourse{
         flex-direction: row;
-    }
-    .theCourse > div{
-        margin: 0rem 1rem;
     }
     .othercoursepointer{
         flex-direction: row;
